# Gobang

./: .clang-format  .gitignore  AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  ChessPad.cpp  ChessPad.h  ChessPiece.cpp  ChessPiece.h  CmdGame.cpp  CmdGame.h  CmdMain.cpp  CmdPlayer.cpp  CmdPlayer.h  CompileForCmd.bat  Game.cpp  Game.h  GameWindow.cpp  GameWindow.ui  Gobang.pro  MainWindow.cpp  MyThread.cpp  NetGame.cpp  NetGame.h  NetPlayer.cpp  NetPlayer.h  OldMain.cpp  Player.cpp  Player.h  QtGame.cpp  QtGame.h  QtGameClient.cpp  QtGameClient.h  QtNetGame.cpp  QtNetGame.h  QtPlayer.cpp  QtPlayer.h  README.md  UTF-8toGB2312.sh  clang.sh  (+13 more)
android-sources/: AndroidManifest.xml
